Fixed layout squishing on mobile

--- a/style.css
+++ b/style.css
@@ -1,31 +1,42 @@
-* {
-    color: #f5f5f5;
-    border: solid 2px red;
-}
 body {
     background-color: #16161d;
     margin: 0px 10vw;
-    min-height: 100vh;
+}
+
+.section1,
+.section2 {
+    border: solid 2px green;
+    margin: 20px 0px;
 }
 
 .header {
+    border: 2px solid red;
     padding: 16px;
-    height: 30px;
+    min-height: 3vh;
 }
 
-.frontPage {
+.page1,
+.page2 {
     display: flex;
-    margin-top: 20px;
-    min-height: 80vh;
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
+    min-height: 96vh;
 }
+
 
 .frontChild {
     border: blue 2px solid;
     width: 600px;
     height: 600px;
-    flex: 0 0 auto;
+    flex: 0 1 auto;
     margin: 20px;
+}
+
+.section2 .frontChild {
+        border: teal 2px solid;
+        width: 600px;
+        height: 600px;
+        flex: 0 1 auto;
+        margin: 20px;
 }
